# YouVote

./: .gitignore  LICENSE  Makefile  README.md  YouVote.cabal  make.sh  stack.yaml  start.sh
app/: Main.hs
src/client/: Api.elm  Main.elm  Routing.elm  elm-package.json
src/client/Polls/: List.elm  Model.elm  New.elm  Stats.elm  Vote.elm
src/code-generator/: Main.hs
src/server/: Application.hs  Lib.hs  Poll.hs
src/server/Database/: Model.hs  Poll.hs
src/server/Poll/: Algebra.hs  Models.hs
static/css/: site.css
test/: Spec.hs
