name:                YouVote
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/CarstenKoenig/YouVote#readme
license:             BSD3
license-file:        LICENSE
author:              Carsten König
maintainer:          Carsten@gettingsharper.de
copyright:           Copyright: (c) 2016 Carsten König
category:            Your Projects Category
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src/server
  exposed-modules:     Application
                     , Database.Model
                     , Database.Poll
                     , Poll.Models
                     , Poll.Algebra
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , containers
                     , elm-export
                     , free
                     , http-api-data
                     , http-types
                     , lifted-base
                     , monad-control
                     , monad-logger
                     , mtl
                     , network
                     , network-uri
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , servant-elm
                     , servant-lucid
                     , servant-server
                     , resourcet
                     , resource-pool
                     , text
                     , time
                     , transformers
                     , lucid
                     , wai
                     , wai-cors
                     , wai-extra
                     , warp
  default-language:    Haskell2010
  ghc-options:         -fno-warn-name-shadowing 

executable YouVote
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -fno-warn-name-shadowing -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , YouVote
  default-language:    Haskell2010

  
executable YouVote-codeGen
  hs-source-dirs:      src/code-generator
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , YouVote
                     , elm-export
                     , servant-elm
                     , servant-server >= 0.5
                     , text
  default-language:    Haskell2010  

  
test-suite YouVote-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , YouVote
                     , aeson
                     , containers
                     , free
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , servant
                     , servant-server
                     , mtl
                     , wai
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/CarstenKoenig/YouVote
